# pytest-doctest-import-twice

./: .pre-commit-config.yaml  README.rst  pyproject.toml
pytest_doctest_import_twice/: __init__.py  singleton.py
tests/: test_basic.py
