[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'pytest-doctest-import-twice'
version = '1.0'
description = 'pytest reproducer for doctest import behavior'
authors = [{ name = 'Philipp A.', email = 'flying-sheep@web.de' }]
readme = 'README.rst'
license = 'GPL-3.0-or-later'
requires-python = '>=3.11'
dependencies = [
    'pytest @ git+https://github.com/pytest-dev/pytest.git',
]

[tool.pytest.ini_options]
addopts = [
    '--import-mode=importlib',
    '--doctest-modules',
]

[tool.hatch]
metadata.allow-direct-references = true
